Update Russian text and hints in index.html

--- a/static/index.html
+++ b/static/index.html
@@ -62,7 +62,7 @@
 
   <!-- Screen 3: Done -->
   <div id="scrDone" class="card" style="display:none;">
-    <b style="color:#16a34a;">✅ Спасибо! Сеанс записи завершён.</b>
+    <b style="color:#16a34a;">✅ Спасибо за участие в опросе! Сеанс записи завершён.</b>
   </div>
 </div>
 
@@ -92,10 +92,11 @@ const RUS_SENTS = [
 const TEXTS = [
   {
     title: "Текст A",
-    body: `Вставьте сюда ваш связный текст на русском.
-
-Можно в несколько абзацев.
-С переносами строк — нормально.`
+    body: `Я учусь в университете. И мои друзья учатся в университете. Борис - экономист, Сергей - юрист, а Иван - инженер. Мы живем рядом, возле центральной площади. В свободное время мы ходим в кино, в парк, в клуб, слушаем лекции. Часто мы собираемся у
+меня или у Сергея, играем в шахматы, смотрим телевизор. Сегодня суббота. Четыре часа. Мы ждем Ивана. Он поступает в магистратуру и сегодня сдает последний экзамен. Вот звонит звонок.
+- Ну как дела? Сдал?
+- Все в порядке! Сдал! 
+Мы садимся пить чай.`
   }
 ];
 
@@ -105,7 +106,7 @@ const STAGES = [
     name: "Этап 1 — Предложения на русском",
     promptLabel: "Sentence:",      // keep for existing kindTag logic
     promptLabelRu: "Предложение:",
-    hint: "Прочитайте предложение по-русски ДВА РАЗА. Слова в скобках читать не нужно.",
+    hint: "Прочитайте предложение по-русски ОДИН РАЗ. Слова в скобках читать не нужно. При необходимости можете перезаписать.",
     items: RUS_SENTS.map((s, idx) => ({ id: `sent${idx+1}`, body: s }))
   },
   {
