Fix punctuation in Russian sentence

--- a/static/index.html
+++ b/static/index.html
@@ -72,7 +72,7 @@ const API_BASE = "https://monkfish-app-c8mpr.ondigitalocean.app";
 
 // Stage 1: Russian sentences only
 const RUS_SENTS = [
-  "Наступила осень,",
+  "Наступила осень.",
   "Антон стоит на мосту.",
   "Какая завтра будет погода?",
   "Где можно отдохнуть?",
