--- a/static/index.html
+++ b/static/index.html
@@ -32,7 +32,7 @@
 
   <!-- Screen 1: Participant ID -->
   <div id="scrId" class="card" style="display:none;">
-    <label style="font-weight:600;">Идентификатор участника (имя + возраст):</label>
+    <label style="font-weight:600;">Идентификатор участника (имя на латинице + возраст):</label>
     <input id="pid" type="text" placeholder="001" style="margin:0 8px;padding:6px 10px;border:1px solid #888;border-radius:6px">
     <button id="go" style="padding:6px 12px;border-radius:6px;background:#2563eb;color:#fff;border:0">Начать</button>
     <div id="warn" style="color:#b91c1c;display:none;margin-top:6px">Используйте только буквы, цифры, _ или -</div>
