Fix typo in juice description in index.html

--- a/static/index.html
+++ b/static/index.html
@@ -82,7 +82,7 @@ const RUS_SENTS = [
   "Ваше имя? (при регистрации)",
   "Какой сегодня день!",
   "Сколько доброты в нем!",
-  "Какой вкусной сок!",
+  "Какой вкусный сок!",
   "Сколько студентов!",
   "Какой он отличник! (то есть он не отличник)",
   "Да какая она актриса! (то есть она не актриса)"
